--- a/ino.ini
+++ b/ino.ini
@@ -1,2 +1,4 @@
-board-model = uno
-serial-port = /dev/ttyACM0
+#board-model = uno
+board-model = pro5v328
+serial-port = /dev/ttyUSB0
+baud-rate = 115200
