--- a/ino.ini
+++ b/ino.ini
@@ -1,4 +1,6 @@
 #board-model = uno
 board-model = pro5v328
-serial-port = /dev/ttyUSB0
-baud-rate = 115200
+serial-port = /dev/rfcomm0
+#serial-port = /dev/ttyUSB0
+#baud-rate = 115200
+baud-rate = 57600
